# Projecto-final-AED-I-LP-I

./: README.md
proyecto AED LP FINAL 2 ANO/: CMakeLists.txt  binario.c  binario.h  doc.c  doc.h  doc_similarity.c  doc_similarity.h  freq.c  freq.h  ll_tk_tf.c  ll_tk_tf.h  matrix_int.c  matrix_int.h  matrix_str.c  matrix_str.h  similarity.c  similarity.h  test_r1_1.c  test_r1_2.c  test_r1_3.c  test_r1_4.c  test_r1_5.c  test_r1_6.c  test_r2_1.c  test_r2_2.c  test_r2_3.c  test_r2_4.c  tf.c  tf.h  tokenizer.c  tokenizer.h  tokens.c  tokens.h
